[gd_scene load_steps=6 format=3 uid="uid://dj5aepotjcyjb"]

[ext_resource type="Script" path="res://main.gd" id="1_uxo5k"]
[ext_resource type="PackedScene" uid="uid://86ctd4uijgqv" path="res://player.tscn" id="1_x2u46"]
[ext_resource type="PackedScene" uid="uid://do7xpb7kd5puj" path="res://enemigo.tscn" id="2_sfwti"]
[ext_resource type="PackedScene" uid="uid://cs12ddg1t3lhy" path="res://interfaz.tscn" id="4_xc8bu"]

[sub_resource type="Curve2D" id="Curve2D_nhjqr"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 640, 0, 0, 0, 0, 0, 640, 960, 0, 0, 0, 0, 0, 960, 0, 0, 0, 0, 0, 0)
}
point_count = 5

[node name="Main" type="Node"]
script = ExtResource("1_uxo5k")
Enemigo = ExtResource("2_sfwti")

[node name="Player" parent="." instance=ExtResource("1_x2u46")]

[node name="EnemigoTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="PuntuacionTimer" type="Timer" parent="."]

[node name="InicioTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="PlayerPos" type="Marker2D" parent="."]
position = Vector2(320, 480)

[node name="SpawnEnemigo" type="Path2D" parent="."]
curve = SubResource("Curve2D_nhjqr")

[node name="EnemigoPos" type="PathFollow2D" parent="SpawnEnemigo"]

[node name="Interfaz" parent="." instance=ExtResource("4_xc8bu")]

[connection signal="hit" from="Player" to="." method="game_over"]
[connection signal="timeout" from="EnemigoTimer" to="." method="_on_enemigo_timer_timeout"]
[connection signal="timeout" from="PuntuacionTimer" to="." method="_on_puntuacion_timer_timeout"]
[connection signal="timeout" from="InicioTimer" to="." method="_on_inicio_timer_timeout"]
[connection signal="iniciar_juego" from="Interfaz" to="." method="inicio"]
